// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="styled__StyledStatsBar-sc-1urwgm2-23 jNjdUz"
  >
    <div
      class="Ellipsis-jiq0k6-0 hkAFf"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="styled__StyledStatsBar-sc-1urwgm2-23 jNjdUz"
  >
    <div
      class="styled__StyledRightPartial-sc-1urwgm2-33 lfbeWH"
    >
      <div
        class="styled__StyledWidthSliderContainer-sc-1urwgm2-35 dXlRDb"
      >
        Max column width:
        <input
          class="styled__StyledWidthSlider-sc-1urwgm2-36 BcWxB"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="styled__PaddedDiv-sc-1urwgm2-1 dnoNRj"
  >
    <div
      class="styled__StyledBodyMessage-sc-1urwgm2-27 garJHb"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="styled__PaddedDiv-sc-1urwgm2-1 dnoNRj"
  >
    <pre>
      ╒═══╕
│"x"│
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
